@@ -1,7 +1,7 @@
 package org.vstu.compprehension.Service;
 
-import com.github.jsonldjava.shaded.com.google.common.collect.Streams;
 import jakarta.persistence.EntityManager;
+import lombok.SneakyThrows;
 import lombok.extern.log4j.Log4j2;
 import lombok.val;
 import org.apache.commons.collections4.ListUtils;
@@ -17,25 +17,21 @@ import org.vstu.compprehension.dto.*;
 import org.vstu.compprehension.dto.feedback.FeedbackDto;
 import org.vstu.compprehension.dto.feedback.FeedbackViolationLawDto;
 import org.vstu.compprehension.dto.question.QuestionDto;
+import org.vstu.compprehension.models.businesslogic.Explanation;
 import org.vstu.compprehension.models.businesslogic.domains.DomainFactory;
 import org.vstu.compprehension.models.businesslogic.strategies.AbstractStrategyFactory;
+import org.vstu.compprehension.models.entities.*;
 import org.vstu.compprehension.models.entities.EnumData.AttemptStatus;
+import org.vstu.compprehension.models.entities.EnumData.Decision;
+import org.vstu.compprehension.models.entities.EnumData.Language;
 import org.vstu.compprehension.models.entities.EnumData.QuestionType;
-import org.vstu.compprehension.models.entities.ExerciseAttemptEntity;
-import org.vstu.compprehension.models.entities.InteractionEntity;
 import org.vstu.compprehension.models.entities.QuestionOptions.OrderQuestionOptionsEntity;
-import org.vstu.compprehension.models.entities.ResponseEntity;
-import org.vstu.compprehension.models.entities.ViolationEntity;
 import org.vstu.compprehension.models.entities.exercise.ExerciseStageEntity;
 import org.vstu.compprehension.models.repository.*;
 import org.vstu.compprehension.utils.Checkpointer;
-import org.vstu.compprehension.utils.HyperText;
 import org.vstu.compprehension.utils.Mapper;
 
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collection;
-import java.util.Objects;
+import java.util.*;
 import java.util.stream.Collectors;
 
 import static org.vstu.compprehension.models.entities.EnumData.InteractionType.REQUEST_CORRECT_ANSWER;
@@ -57,6 +53,7 @@ public class FrontendService {
     private final EntityManager entityManager;
     private final UserRepository userRepository;
 
+
     public FrontendService(ExerciseAttemptRepository exerciseAttemptRepository, QuestionRepository questionRepository, ExerciseAttemptService exerciseAttemptService, ExerciseService exerciseService, EntityManager entityManager, QuestionService questionService, LocalizationService localizationService, AbstractStrategyFactory strategyFactory, DomainFactory domainFactory, UserRepository userRepository, FeedbackRepository feedbackRepository, InteractionRepository interactionRepository) {
         this.exerciseAttemptRepository = exerciseAttemptRepository;
         this.questionRepository = questionRepository;
@@ -74,12 +71,8 @@ public class FrontendService {
 
     @Transactional(propagation = Propagation.REQUIRED)
     public @NotNull SupplementaryFeedbackDto addSupplementaryQuestionAnswer(@NotNull InteractionDto interaction) throws Exception {
-        val exAttemptId = interaction.getAttemptId();
         val questionId = interaction.getQuestionId();
         val answers = interaction.getAnswers();
-
-        val attempt = exerciseAttemptRepository.findById(exAttemptId)
-                .orElseThrow(() -> new Exception("Can't find attempt with id " + exAttemptId));
         val question = questionService.getQuestion(questionId);
         if (!question.isSupplementary()) {
             throw new Exception("Question with id" + questionId + " isn't supplementary");
@@ -87,25 +80,23 @@ public class FrontendService {
 
         val responses = questionService.responseQuestion(question, answers);
 
-        return questionService.judgeSupplementaryQuestion(question, responses, attempt);
+        return questionService.judgeSupplementaryQuestion(question, responses);
     }
 
     @Transactional(propagation = Propagation.REQUIRED)
     public @NotNull FeedbackDto addQuestionAnswer(@NotNull InteractionDto interaction) throws Exception {
         Checkpointer ch = new Checkpointer(log);
 
-        val exAttemptId = interaction.getAttemptId();
         val questionId = interaction.getQuestionId();
         val answers = interaction.getAnswers();
 
-        ExerciseAttemptEntity attempt = exerciseAttemptRepository.findById(exAttemptId)
-                .orElseThrow(() -> new Exception("Can't find attempt with id " + exAttemptId));
-        // ch.hit("attempt found");
+        ExerciseAttemptEntity attempt = exerciseAttemptRepository.findByQuestionId(questionId)
+                .orElse(null);
 
         // evaluate answer
-        val domain = domainFactory.getDomain(attempt.getExercise().getDomain().getName());
-        val tags = attempt.getExercise().getTags().stream().map(domain::getTag).filter(Objects::nonNull).toList();
         val question = questionService.getSolvedQuestion(questionId);
+        val domain = question.getDomain();
+        val tags = question.getTags();
         ch.hit("solved question obtained");
         val responses = questionService.responseQuestion(question, answers);
         val newResponses = responses.stream().filter(x -> x.getCreatedByInteraction() == null).collect(Collectors.toList());
@@ -120,40 +111,42 @@ public class FrontendService {
         val correctInteractionsCount = (int)existingInteractions.stream().filter(i -> i.getViolations().isEmpty()).count();
         // ch.hit("add interaction ("+correctInteractionsCount+")");
 
-        // add feedback
-        val strategy = strategyFactory.getStrategy(attempt.getExercise().getStrategyId());
-        val grade = strategy.grade(attempt);
-        ch.hit("graded with strategy ("+grade+")");
-        ie.getFeedback().setInteractionsLeft(judgeResult.IterationsLeft);
-        ie.getFeedback().setGrade(grade);
-        feedbackRepository.save(ie.getFeedback());
+        // add feedback & decide next exercise state
+        var feedback = ie.getFeedback();
+        feedback.setInteractionsLeft(judgeResult.IterationsLeft);
+        var grade = 1f;
+        var strategyAttemptDecision = Decision.CONTINUE;
+        if (attempt != null) {
+            var strategy = strategyFactory.getStrategy(attempt.getExercise().getStrategyId());
+            grade = strategy.grade(attempt, judgeResult);
+            ch.hit("graded with strategy ("+grade+")");
+
+            strategyAttemptDecision = strategy.decide(attempt);
+            exerciseAttemptService.ensureAttemptStatus(attempt, strategyAttemptDecision);
+            ch.hit("decide next exercise state ("+strategyAttemptDecision.name()+")");
+        }
+        feedback.setGrade(grade);
+        feedbackRepository.save(feedback);
         ch.hit("add feedback ("+judgeResult.IterationsLeft+" interactions left)");
 
-        // decide next exercise state
-        val strategyAttemptDecision = strategy.decide(attempt);
-        exerciseAttemptService.ensureAttemptStatus(attempt, strategyAttemptDecision);
-
-        ch.hit("decide next exercise state ("+strategyAttemptDecision.name()+")");
-
+        val locale = getQuestionLanguage(attempt);
         // calculate error message
         val violations = judgeResult.violations.stream()
                 .map(v -> FeedbackViolationLawDto.builder().name(v.getLawName()).canCreateSupplementaryQuestion(domain.needSupplementaryQuestion(v)).build())
-                .filter(Objects::nonNull);
-        val explanations = judgeResult.explanations != null
-            ? judgeResult.explanations.stream().map(HyperText::getText)
-            : questionService.explainViolations(question, judgeResult.violations).stream().map(HyperText::getText);
-        val errors = Streams.zip(violations, explanations, Pair::of)
-                .collect(Collectors.toList());
-        val locale = attempt.getUser().getPreferred_language().toLocale();
+                .filter(Objects::nonNull).toList();
+        Collection<Explanation> explanationSource = judgeResult.explanation.getRawMessage().isEmpty() ? judgeResult.explanation.getChildren() : List.of(judgeResult.explanation);
+        val errors = explanationSource.stream().map(e -> Pair.of(
+                violations.stream().filter(v -> e.getDomainLawNames().contains(v.getName())).toList(),
+                e.toHyperText(locale).getText())).toList();
         val messages = !errors.isEmpty() && !judgeResult.isAnswerCorrect ? errors.stream().map(pair -> FeedbackDto.Message.Error(pair.getRight(), pair.getLeft())).toArray(FeedbackDto.Message[]::new)
-                : judgeResult.IterationsLeft == 0 && judgeResult.isAnswerCorrect ? new FeedbackDto.Message[] { FeedbackDto.Message.Success(localizationService.getMessage("exercise_correct-last-question-answer", locale)) }
-                : judgeResult.IterationsLeft > 0 && judgeResult.isAnswerCorrect ? new FeedbackDto.Message[] { FeedbackDto.Message.Success(localizationService.getMessage("exercise_correct-question-answer", locale)) }
+                : judgeResult.IterationsLeft == 0 && judgeResult.isAnswerCorrect ? new FeedbackDto.Message[] { FeedbackDto.Message.Success(localizationService.getMessage("exercise_correct-last-question-answer", locale), violations) }
+                : judgeResult.IterationsLeft > 0 && judgeResult.isAnswerCorrect ? new FeedbackDto.Message[] { FeedbackDto.Message.Success(localizationService.getMessage("exercise_correct-question-answer", locale), violations) }
                 : null;
         // ch.hit("calculate error message ("+ (messages != null ? messages.length : 0) +")");
 
         // return result of the last correct interaction
         val correctInteraction = existingInteractions.stream()
-                .filter(i -> i.getFeedback().getInteractionsLeft() >= 0 && i.getViolations().size() == 0) // select only interactions without mistakes
+                .filter(i -> i.getFeedback().getInteractionsLeft() >= 0 && i.getViolations().isEmpty()) // select only interactions without mistakes
                 .reduce((first, second) -> second);
         val correctAnswers = correctInteraction
                 .map(InteractionEntity::getResponses).stream()
@@ -163,7 +156,7 @@ public class FrontendService {
 
         // special case for order question
         // force complete answer if the last but one answer is correct
-        val isAnswerCorrect = errors.size() == 0 && judgeResult.isAnswerCorrect;
+        val isAnswerCorrect = errors.isEmpty() && judgeResult.isAnswerCorrect;
         val orderQuestionOptions = Utils.tryCast(question.getQuestionData().getOptions(), OrderQuestionOptionsEntity.class).orElse(null);
         if (isAnswerCorrect && question.getQuestionData().getQuestionType().equals(QuestionType.ORDER) &&
                 orderQuestionOptions != null && !orderQuestionOptions.isMultipleSelectionEnabled() &&
@@ -175,7 +168,7 @@ public class FrontendService {
                     .findFirst().get();
             val newAnswer = ArrayUtils.add(correctAnswers, missingAnswer);
 //            ch.hit("results made");
-            val res = addQuestionAnswer(new InteractionDto(exAttemptId, questionId, newAnswer));
+            val res = addQuestionAnswer(new InteractionDto(questionId, newAnswer));
             ch.since_start("addOrdinaryQuestionAnswer() + fill last answer: completed in");
             return res;
         }
@@ -186,7 +179,7 @@ public class FrontendService {
         return Mapper.toFeedbackDto(question,
                 messages,
                 correctInteractionsCount,
-                (int)existingInteractions.stream().filter(i -> i.getViolations().size() > 0).count(),
+                (int)existingInteractions.stream().filter(i -> !i.getViolations().isEmpty()).count(),
                 ie.getFeedback().getGrade(),
                 ie.getFeedback().getInteractionsLeft(),
                 correctAnswers,
@@ -194,11 +187,21 @@ public class FrontendService {
                 strategyAttemptDecision);
     }
 
+    @SneakyThrows
     @Transactional(propagation = Propagation.REQUIRED)
-    public @NotNull QuestionDto generateQuestion(@NotNull Long exAttemptId) throws Exception {
+    public @NotNull QuestionDto generateQuestion(@NotNull Long exAttemptId) {
         val attempt = exerciseAttemptRepository.findById(exAttemptId)
                 .orElseThrow(() -> new Exception("Can't find attempt with id " + exAttemptId));
         val question = questionService.generateQuestion(attempt);
+        return Mapper.toDto(question);
+    }
+
+    @Transactional(propagation = Propagation.REQUIRED)
+    public @NotNull QuestionDto generateQuestionByMetadata(Integer metadataId, Language lang) throws Exception {
+        if (metadataId == null) {
+            throw new Exception("Metadata id is null");
+        }
+        val question = questionService.generateQuestion(metadataId, lang);
         return Mapper.toDto(question);
     }
 
@@ -210,9 +213,18 @@ public class FrontendService {
         val violation = new ViolationEntity(); //TODO: make normal choice
         violation.setLawName(violationLaws[0]);
 
-        // domain.generateSupplementaryQuestion(question, violation)
+        var language = getQuestionLanguage(question);
+        return questionService.generateSupplementaryQuestion(question, violation, language);
+    }
 
-        return questionService.generateSupplementaryQuestion(question, violation, question.getExerciseAttempt().getUser().getPreferred_language());
+    private Language getQuestionLanguage(QuestionEntity question) {
+        return getQuestionLanguage(question.getExerciseAttempt());
+    }
+
+    private Language getQuestionLanguage(ExerciseAttemptEntity attempt) {
+        return attempt != null
+            ? attempt.getUser().getPreferred_language()
+            : Language.RUSSIAN/*ENGLISH*/;
     }
 
     @Transactional(propagation = Propagation.REQUIRED)
@@ -222,7 +234,7 @@ public class FrontendService {
     }
 
     @Transactional(propagation = Propagation.REQUIRED)
-    public @NotNull FeedbackDto generateNextCorrectAnswer(@NotNull Long questionId) throws Exception {
+    public @NotNull FeedbackDto generateNextCorrectAnswer(@NotNull Long questionId) {
         // get next correct answer
         val question = questionService.getSolvedQuestion(questionId);
         val correctAnswer = questionService.getNextCorrectAnswer(question);
@@ -232,7 +244,7 @@ public class FrontendService {
 
         // get last correct interaction responses
         val lastCorrectInteraction = question.getQuestionData().getInteractions().stream()
-                .filter(i -> i.getFeedback().getInteractionsLeft() >= 0 && i.getViolations().size() == 0)
+                .filter(i -> i.getFeedback().getInteractionsLeft() >= 0 && i.getViolations().isEmpty())
                 .reduce((first, second) -> second);
         val lastCorrectInteractionResponses = lastCorrectInteraction
                 .map(InteractionEntity::getResponses)
@@ -243,9 +255,8 @@ public class FrontendService {
         //responseRepository.saveAll(responses);
 
         // evaluate new answer
-        val exerciseAttempt = question.getQuestionData().getExerciseAttempt();
-        val domain = domainFactory.getDomain(exerciseAttempt.getExercise().getDomain().getName());
-        val tags = exerciseAttempt.getExercise().getTags().stream().map(domain::getTag).filter(Objects::nonNull).toList();
+        val attempt = question.getQuestionData().getExerciseAttempt();
+        val tags = question.getTags();
         val newResponses = responses.stream().filter(x -> x.getCreatedByInteraction() == null).collect(Collectors.toList());
         val judgeResult = questionService.judgeQuestion(question, responses, tags);
 
@@ -253,27 +264,36 @@ public class FrontendService {
         var existingInteractions = question.getQuestionData().getInteractions();
         val ie = new InteractionEntity(REQUEST_CORRECT_ANSWER, question.getQuestionData(), judgeResult.violations, judgeResult.correctlyAppliedLaws, responses, newResponses);
         existingInteractions.add(ie);
-        val correctInteractionsCount = (int)existingInteractions.stream().filter(i -> i.getViolations().size() == 0).count();
+        val correctInteractionsCount = (int)existingInteractions.stream().filter(i -> i.getViolations().isEmpty()).count();
 
-        // add feedback
-        val strategy = strategyFactory.getStrategy(exerciseAttempt.getExercise().getStrategyId());
-        val grade = strategy.grade(exerciseAttempt);
-        ie.getFeedback().setInteractionsLeft(judgeResult.IterationsLeft);
-        ie.getFeedback().setGrade(grade);
-        //feedbackRepository.save(ie.getFeedback());
-        interactionRepository.save(ie);
+        // add feedback & decide next exercise state
+        var feedback = ie.getFeedback();
+        feedback.setInteractionsLeft(judgeResult.IterationsLeft);
+        var grade = 1f;
+        var strategyAttemptDecision = Decision.CONTINUE;
+        if (attempt != null) {
+            var strategy = strategyFactory.getStrategy(attempt.getExercise().getStrategyId());
+            grade = strategy.grade(attempt, judgeResult);
 
-        // decide next exercise state
-        val strategyAttemptDecision = strategy.decide(exerciseAttempt);
-        exerciseAttemptService.ensureAttemptStatus(exerciseAttempt, strategyAttemptDecision);
+            strategyAttemptDecision = strategy.decide(attempt);
+            exerciseAttemptService.ensureAttemptStatus(attempt, strategyAttemptDecision);
+        }
+        feedback.setGrade(grade);
+        feedbackRepository.save(feedback);
 
         // build feedback message
-        val messages = new FeedbackDto.Message[] { FeedbackDto.Message.Success(correctAnswer.explanation.toString()) };
+        val messages = correctAnswer.explanation.getChildren().stream()
+                .map(e -> FeedbackDto.Message.Success(e.toHyperText(getQuestionLanguage(attempt)).getText(),
+                        e.getDomainLawNames().stream().map(law ->
+                                FeedbackViolationLawDto.builder()
+                                        .name(law)
+                                        .canCreateSupplementaryQuestion(false).build()).toList()))
+                .toList().toArray(new FeedbackDto.Message[0]);
 
         return Mapper.toFeedbackDto(question,
                 messages,
                 correctInteractionsCount,
-                (int)existingInteractions.stream().filter(i -> i.getViolations().size() > 0).count(),
+                (int)existingInteractions.stream().filter(i -> !i.getViolations().isEmpty()).count(),
                 ie.getFeedback().getGrade(),
                 ie.getFeedback().getInteractionsLeft(),
                 ie.getResponses().stream().map(Mapper::toDto).toArray(AnswerDto[]::new),
@@ -336,7 +356,8 @@ public class FrontendService {
         return result;
     }
 
-    public @NotNull ExerciseAttemptDto createExerciseAttempt(@NotNull Long exerciseId, @NotNull Long userId) throws Exception {
+    @Transactional(propagation = Propagation.REQUIRED)
+    public @NotNull ExerciseAttemptDto createExerciseAttempt(@NotNull Long exerciseId, @NotNull Long userId) {
         var ea = createNewAttempt(exerciseId, userId);
         return Mapper.toDto(ea);
     }
@@ -345,7 +366,6 @@ public class FrontendService {
     public @NotNull ExerciseAttemptDto createSolvedExerciseAttempt(@NotNull Long exerciseId, @NotNull Long userId) throws Exception {
         var ea = createNewAttempt(exerciseId, userId);
         var strategy = strategyFactory.getStrategy(ea.getExercise().getStrategyId());
-        var domain = domainFactory.getDomain(ea.getExercise().getDomain().getName());
         var targetQuestionCount = strategy.getOptions().isMultiStagesEnabled()
                 ? ea.getExercise().getStages().stream()
                     .map(ExerciseStageEntity::getNumberOfQuestions)
@@ -382,16 +402,9 @@ public class FrontendService {
         return Mapper.toDto(ea);
     }
 
-    @Transactional(propagation = Propagation.REQUIRES_NEW)
+    @Transactional(propagation = Propagation.REQUIRED)
     public ExerciseAttemptEntity createNewAttempt(@NotNull Long exerciseId, @NotNull Long userId) {
-        // complete all incompleted attempts
-        val incompletedAttempts = exerciseAttemptRepository.getAllByStatus(exerciseId, userId, AttemptStatus.INCOMPLETE);
-        log.info("Found {} existing attempt to complete", incompletedAttempts.size());
-        for(val att : incompletedAttempts) {
-            att.setAttemptStatus(AttemptStatus.COMPLETED_BY_SYSTEM);
-            log.info("Attempt {} completed successfully", att.getId());
-        }
-        exerciseAttemptRepository.saveAll(incompletedAttempts);
+        exerciseAttemptRepository.changeExistingAttemptsStatus(exerciseId, userId, AttemptStatus.INCOMPLETE, AttemptStatus.COMPLETED_BY_SYSTEM);
 
         var exercise = exerciseService.getExercise(exerciseId);
         var user = userRepository.findById(userId).orElseThrow();
@@ -400,7 +413,7 @@ public class FrontendService {
         ea.setExercise(exercise);
         ea.setUser(user);
         ea.setAttemptStatus(AttemptStatus.INCOMPLETE);
-        ea.setQuestions(new ArrayList<>(0));
+        ea.setQuestions(new ArrayList<>());
         exerciseAttemptRepository.save(ea);
 
         return ea;
